Java 8 version of DiscoClient using Apache HttpComponents 5